--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <!-- <i class="fas fa-graduation-cap"></i> -->
              <img class="image"src="WhatsApp_Image_2024-12-23_at_18.17.07_ecbb9222-removebg-preview.png" alt="">
         </div>
         <ul class="nav-links">
@@ -56,26 +55,6 @@
         </div>
     </section>
 
-    <!-- <section id="university" class="courses">
-        <h2>University Courses</h2>
-        <div class="course-grid">
-            <div class="course-card">
-                <i class="fas fa-laptop-code"></i>
-                <h3>GRADUATION</h3>
-                <p>B.A<BR> B.COM<BR>BCA<BR>BBA</p>
-                <span class="duration">3 Years</span>
-            </div>
-            <div class="course-grid">
-                <i class="fas fa-chart-line"></i>
-                <h3>post GRADUATION</h3>
-                <p>M.A<BR>M.COM<BR>MCA<BR>MBA</p>
-                <span class="duration">2 Years</span>
-            </div>
-            <div class="course-card">
-                <i class="fas fa-cogs"></i>
-                <h3>Engineering</h3>
-                <p>Explore mechanica -->
-
     <section id="open-school" class="open-school">
         <h2>Open School Courses</h2>
         <div class="school-grid">
@@ -105,7 +84,7 @@
         <div class="contact-container">
             <div class="contact-info">
                 <div><i class="fas fa-envelope"></i>mgiram3@gmail.com</div>
-                <div><i class="fas fa-phone"></i>+91 9315522378</div>
+                <div><i class="fas fa-phone"></i>+91 1234567890</div>
                 <div><i class="fas fa-map-marker-alt"></i>A-1240, 2nd Floor,G.D Colony, Mayur Vihar Phase-3 <br>Delhi-110096</div>
             </div>
             <form class="contact-form">
@@ -115,11 +94,12 @@
                 <button type="submit">Send Message</button>
             </form>
             <div class="link">
-                <div><a href="https://www.instagram.com/mgiclasses?igsh=cjU0b2l4a2c3ZHI3"><i class="fa-brands fa-instagram"></i></a></div>
-                <div><a href="https://www.facebook.com/me/"><i class="fa-brands fa-facebook"></i></a></div>
-                <div><a href="#"><i class="fa-brands fa-whatsapp"></i></a></div>
-                <div><a href="#"><i class="fa-brands fa-twitter"></i></a></div>
+                <a href="https://www.instagram.com/mgiclasses?igsh=cjU0b2l4a2c3ZHI3"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/me/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
+            </div> 
         </div>
     </section>
 </body>    
